--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "ng4-loading-spinner": "^1.1.3",
+    "ngx-loading": "^1.0.14",
     "ngx-xml2json": "^1.0.2",
     "rxjs": "^6.0.0",
     "text-encoding": "^0.6.4",
