--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/angular-clipboard": "^1.5.2",
     "core-js": "^2.5.4",
     "ng4-loading-spinner": "^1.1.3",
     "ngx-loading": "^1.0.14",
+    "ngx-toastr": "^8.8.0",
     "ngx-xml2json": "^1.0.2",
     "rxjs": "^6.0.0",
     "text-encoding": "^0.6.4",
+    "ts-clipboard": "^1.0.16",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
