--- a/.travis.yml
+++ b/.travis.yml
@@ -18,25 +18,13 @@ before_deploy:
 
 deploy:
 - provider: script
-  script: ~/.local/bin/aws s3 sync dist/knowgod s3://stage.knowgod.com --acl public-read --exclude '*.html' --cache-control 'public, max-age=31536000' --delete
+  script: bash scripts/deploy.staging.sh
   skip_cleanup: true
   on:
     branch: staging
 
 - provider: script
-  script: ~/.local/bin/aws s3 sync dist/knowgod s3://stage.knowgod.com --acl public-read --include '*.html' --cache-control 'no-cache' --delete
-  skip_cleanup: true
-  on:
-    branch: staging
-
-- provider: script
-  script: ~/.local/bin/aws s3 sync dist/knowgod s3://knowgod.com --acl public-read --exclude '*.html' --cache-control 'public, max-age=31536000' --delete
-  skip_cleanup: true
-  on:
-    branch: master
-
-- provider: script
-  script: ~/.local/bin/aws s3 sync dist/knowgod s3://knowgod.com --acl public-read --include '*.html' --cache-control 'public, max-age=120' --delete
+  script: bash scripts/deploy.prod.sh
   skip_cleanup: true
   on:
     branch: master
