embed script deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script: ng build --prod
 
 before_deploy:
 - pip install --user awscli
+- cp embed/embed.js dist/embed.js
 
 deploy:
 - provider: script
