--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/assets/img"
+              "src/assets/img",
+              "src/assets/sitemap.txt"
             ],
             "styles": [
               "src/styles.css"
