--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knowgod",
-  "version": "0.0.0", 
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.0",
     "ngx-loading": "^1.0.14",
     "ngx-toastr": "^8.8.0",
     "ngx-xml2json": "^1.0.2",
