--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^7.2.16",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
+    "ng-lottie": "^0.3.2",
     "ngx-loading": "^7.0.0",
     "ngx-toastr": "^10.2.0",
     "ngx-xml2json": "^1.0.2",
