--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 8.x, 10.x]
+        node-version: [14.x, 16.x, 18.x, 8.9.4, 10.9.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
