--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       #   with:
       #     node-version: ${{ matrix.node-version }}
       #     cache: 'npm'
-      # - run: yarn install
+      - run: yarn install
       # - run: yarn run build --if-present # no yarn equivalent
       # - run: yarn test
       - name: Prettier
