--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,13 +20,15 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Repository Checkout
+        uses: actions/checkout@v3
       # - name: Use Node.js ${{ matrix.node-version }}
       #   uses: actions/setup-node@v3
       #   with:
       #     node-version: ${{ matrix.node-version }}
       #     cache: 'npm'
-      - run: yarn install
+      - name: Install Dependencies
+        run: yarn install
       # - run: yarn run build --if-present # no yarn equivalent
       # - run: yarn test
       - name: Prettier
