--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,3 +35,5 @@ jobs:
         run: yarn prettier:check
       - name: Lint
         run: yarn lint
+      - name: Build App
+        run: ng build --prod
