--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,11 +22,11 @@ jobs:
     steps:
       - name: Repository Checkout
         uses: actions/checkout@v3
-      # - name: Use Node.js ${{ matrix.node-version }}
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: ${{ matrix.node-version }}
-      #     cache: 'npm'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: Install Dependencies
         run: yarn install
       # - run: yarn run build --if-present # no yarn equivalent
