--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Lint
         run: yarn lint
       - name: Build App
-        run: ng build --prod
+        run: yarn ng build --prod
