--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,19 +11,20 @@ jobs:
   script:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        # node-version: [14.x, 16.x, 18.x]
-        node-version: [lts/*]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    # strategy:
+    #   matrix:
+    # node-version: [14.x, 16.x, 18.x]
+    # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - name: Repository Checkout
         uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      # - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Latest Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          # node-version: ${{ matrix.node-version }}
+          node-version: 'lts/*'
           # cache: 'npm'
       - name: Install Dependencies
         run: yarn install
