--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,26 +11,30 @@ jobs:
   script:
     runs-on: ubuntu-latest
 
-    # strategy:
-    #   matrix:
-    # node-version: [14.x, 16.x, 18.x]
-    # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 'lts/*'
+      - name: 📦 Install Dependencies
+        run: yarn install
+      - name: 💅 Prettier
+        run: yarn prettier:check
+      - name: 💨 Lint
+        run: yarn lint
+      - name: 🏗️ Build App
+        run: yarn ng build --prod
+
+  before_deploy:
+    runs-on: ubuntu-latest
+    needs: script
 
     steps:
-      - name: Repository Checkout
-        uses: actions/checkout@v3
-      # - name: Use Node.js ${{ matrix.node-version }}
-      - name: Use Latest Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          # node-version: ${{ matrix.node-version }}
           node-version: 'lts/*'
-          # cache: 'npm'
-      - name: Install Dependencies
-        run: yarn install
-      - name: Prettier
-        run: yarn prettier:check
-      - name: Lint
-        run: yarn lint
-      - name: Build App
-        run: yarn ng build --prod
+      # - pip install --user awscli # waiting for AWS help
+      - cp embed/embed.js dist/embed.js
+      - cp embed/example.html dist/example.html
+      - cp -r mobile/ dist/mobile/
