--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,11 @@ jobs:
         with:
           node-version: 'lts/*'
       # - pip install --user awscli # waiting for AWS help
-      - run: cp ../../embed/embed.js ../../dist/embed.js
-      - run: cp ../../embed/example.html ../../dist/example.html
-      - run: cp -r ../../mobile/ ../../dist/mobile/
+      - name: Copy embed.js
+        uses: canastro/copy-file-action@master
+        with:
+          source: 'embed/embed.js'
+          target: 'dist/embed.js'
+      # - run: cp ../../embed/embed.js ../../dist/embed.js
+      # - run: cp ../../embed/example.html ../../dist/example.html
+      # - run: cp -r ../../mobile/ ../../dist/mobile/
