--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.17.0'
+          node-version: '16.x'
       - name: 📦 Install Dependencies
         run: yarn install
       - name: 💅 Prettier
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.17.0'
+          node-version: '16.x'
       - name: 📦 Install Dependencies
         run: yarn install
       - name: 🏗️ Build App
@@ -42,3 +42,21 @@ jobs:
       - run: cp embed/embed.js dist/embed.js
       - run: cp embed/example.html dist/example.html
       - run: cp -r mobile/ dist/mobile/
+
+  # deploy_staging:
+  #   runs-on: ubuntu-latest
+  #   needs: before_deploy
+  #   if: github.ref == 'refs/heads/staging'
+
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '16.x'
+  #     - name: 📦 Install Dependencies
+  #       run: yarn install
+  #     - name: 🏗️ Build App
+  #       run: yarn ng build --prod
+  #     - name: Deploy to Staging
+  #       run: scripts/deploy.staging.sh
+  #       shell: bash
