--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,20 +43,18 @@ jobs:
       - run: cp embed/example.html dist/example.html
       - run: cp -r mobile/ dist/mobile/
 
-  # deploy_staging:
-  #   runs-on: ubuntu-latest
-  #   needs: before_deploy
-  #   if: github.ref == 'refs/heads/staging'
+  deploy_staging:
+    if: github.ref == 'refs/heads/staging'
+    runs-on: ubuntu-latest
+    needs: before_deploy
 
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '16.x'
-  #     - name: 📦 Install Dependencies
-  #       run: yarn install
-  #     - name: 🏗️ Build App
-  #       run: yarn ng build --prod
-  #     - name: Deploy to Staging
-  #       run: scripts/deploy.staging.sh
-  #       shell: bash
+    steps:
+      - run: echo "🎉 This successfully ran on staging."
+
+  deploy_master:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: before_deploy
+
+    steps:
+      - run: echo "🎉 This successfully ran on master."
