--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,6 +43,32 @@ jobs:
       - run: cp embed/example.html dist/example.html
       - run: cp -r mobile/ dist/mobile/
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: before_deploy
+
+    steps:
+      # - uses: actions/checkout@v3
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '16.x'
+      # - name: 📦 Install Dependencies
+      #   run: yarn install
+      # - name: 🏗️ Build App
+      #   run: yarn ng build --prod
+
+      - name: Deploy jp-gha-conversion
+        if: github.ref == 'refs/heads/jp-gha-conversion'
+        run: echo "🎉 This successfully ran on jp-gha-conversion."
+
+      - name: Deploy staging
+        if: github.ref == 'refs/heads/staging'
+        run: echo "🎉 This successfully ran on staging."
+
+      - name: Deploy master
+        if: github.ref == 'refs/heads/master'
+        run: echo "🎉 This successfully ran on master."
+
   deploy_jp-gha-conversion:
     if: github.ref == 'refs/heads/jp-gha-conversion'
     runs-on: ubuntu-latest
@@ -58,6 +84,9 @@ jobs:
 
     steps:
       - run: echo "🎉 This successfully ran on staging."
+      # - name: Deploy to Staging
+      #   run: scripts/deploy.staging.sh
+      #   shell: bash
 
   deploy_master:
     if: github.ref == 'refs/heads/master'
