--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,15 +48,16 @@ jobs:
     needs: before_deploy
 
     steps:
-      # - uses: actions/checkout@v3
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16.x'
-      # - name: 📦 Install Dependencies
-      #   run: yarn install
-      # - name: 🏗️ Build App
-      #   run: yarn ng build --prod
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      - name: 📦 Install Dependencies
+        run: yarn install
+      - name: 🏗️ Build App
+        run: yarn ng build --prod
 
+      # For testing only - to be deleted before merge
       - name: Deploy jp-gha-conversion
         if: github.ref == 'refs/heads/jp-gha-conversion'
         run: echo "🎉 This successfully ran on jp-gha-conversion."
@@ -64,34 +65,9 @@ jobs:
       - name: Deploy staging
         if: github.ref == 'refs/heads/staging'
         run: echo "🎉 This successfully ran on staging."
+        # run: scripts/deploy.staging.sh
+        # shell: bash
 
       - name: Deploy master
         if: github.ref == 'refs/heads/master'
         run: echo "🎉 This successfully ran on master."
-
-  deploy_jp-gha-conversion:
-    if: github.ref == 'refs/heads/jp-gha-conversion'
-    runs-on: ubuntu-latest
-    needs: before_deploy
-
-    steps:
-      - run: echo "🎉 This successfully ran on jp-gha-conversion."
-
-  deploy_staging:
-    if: github.ref == 'refs/heads/staging'
-    runs-on: ubuntu-latest
-    needs: before_deploy
-
-    steps:
-      - run: echo "🎉 This successfully ran on staging."
-      # - name: Deploy to Staging
-      #   run: scripts/deploy.staging.sh
-      #   shell: bash
-
-  deploy_master:
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    needs: before_deploy
-
-    steps:
-      - run: echo "🎉 This successfully ran on master."
