Checking everything inside mobile dir

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -114,6 +114,9 @@ jobs:
       - name: Check dist directory
         run: ls -a dist
 
+      - name: Check dist/mobile directory
+        run: ls -a -R dist/mobile
+
       # For testing only - to be deleted before merge
       - name: Deploy jp-gha-conversion
         if: github.ref == 'refs/heads/jp-gha-conversion'
