--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,71 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  script:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-      - name: 📦 Install Dependencies
-        run: yarn install
-      - name: 💅 Prettier
-        run: yarn prettier:check
-      - name: 💨 Lint
-        run: yarn lint
-      - name: 🏗️ Build App
-        run: yarn ng build --prod
-
-  before_deploy:
-    runs-on: ubuntu-latest
-    needs: script
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-      - name: 📦 Install Dependencies
-        run: yarn install
-      - name: 🏗️ Build App
-        run: yarn ng build --prod
-      - run: pip install --user awscli
-      - run: cp embed/embed.js dist/embed.js
-      - run: cp embed/example.html dist/example.html
-      - run: cp -r mobile/ dist/mobile/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: before_deploy
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-      - name: 📦 Install Dependencies
-        run: yarn install
-      - name: 🏗️ Build App
-        run: yarn ng build --prod
-
-      # For testing only - to be deleted before merge
-      - name: Deploy jp-gha-conversion
-        if: github.ref == 'refs/heads/jp-gha-conversion'
-        run: echo "🎉 This successfully ran on jp-gha-conversion."
-
-      - name: Deploy staging
-        if: github.ref == 'refs/heads/staging'
-        run: echo "🎉 This successfully ran on staging."
-        # run: scripts/deploy.staging.sh
-        # shell: bash
-
-      - name: Deploy master
-        if: github.ref == 'refs/heads/master'
-        run: echo "🎉 This successfully ran on master."
-
-  uberjob:
+  Test and Deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -112,7 +48,7 @@ jobs:
       - name: Deploy jp-gha-conversion
         if: github.ref == 'refs/heads/jp-gha-conversion'
         run: echo "🎉 This successfully ran on jp-gha-conversion."
-
+      # End test
       - name: Deploy staging
         if: github.ref == 'refs/heads/staging'
         run: echo "🎉 This successfully ran on staging."
