--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -81,6 +81,6 @@ jobs:
       - name: Copy mobile directory
         run: cp -r mobile/ dist/mobile/
 
-      - run: echo "🎉 This successfully deployed from ${{ github.ref_name }}."
+      - run: echo "🎉 This successfully deployed from ${{ github.ref_name }} on the ${{ (github.ref == 'refs/heads/master' && 'prod') || ((github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/jp-gha-conversion') && 'stage') }} environment."
         # run: scripts/deploy.staging.sh
         # shell: bash
