Fixing "runs" typo

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -87,14 +87,14 @@ jobs:
       #   shell: bash
       - name: Update Embed Host
         if: github.ref == 'refs/heads/staging'
-        runs: sed -i "s%$appDomainPlaceholder%$appDomain%g" dist/embed.js
+        run: sed -i "s%$appDomainPlaceholder%$appDomain%g" dist/embed.js
         env:
           appDomainPlaceholder: '{appDomain}'
           appDomain: 'https://stage.knowgod.com'
 
       - name: Deploy to s3
         if: github.ref == 'refs/heads/staging'
-        runs: |
+        run: |
           aws s3 sync dist/knowgod $S3_BUCKET --acl public-read --exclude '*.html' --cache-control 'public, max-age=31536000' --delete
           aws s3 sync dist/knowgod $S3_BUCKET --acl public-read --include '*.html' --cache-control 'public, max-age=120' --delete
           aws s3 cp dist/embed.js $S3_BUCKET --acl public-read --cache-control 'public, max-age=600'
