--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -95,10 +95,10 @@ jobs:
       - name: Deploy to s3
         if: github.ref == 'refs/heads/staging'
         run: |
-          aws s3 sync dist/knowgod $S3_BUCKET --acl 'public-read' --exclude '*.html' --cache-control 'public, max-age=31536000' --delete
-          aws s3 sync dist/knowgod $S3_BUCKET --acl 'public-read' --include '*.html' --cache-control 'public, max-age=120' --delete
-          aws s3 cp dist/embed.js $S3_BUCKET --acl 'public-read' --cache-control 'public, max-age=600'
-          aws s3 sync dist/mobile $S3_BUCKET --acl 'public-read' --cache-control 'public, max-age=3600' --content-type 'application/json'
+          aws s3 sync dist/knowgod $S3_BUCKET
+          aws s3 sync dist/knowgod $S3_BUCKET
+          aws s3 cp dist/embed.js $S3_BUCKET
+          aws s3 sync dist/mobile $S3_BUCKET
         env:
           S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
 
