--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -81,24 +81,21 @@ jobs:
       - name: Copy mobile directory
         run: cp -r mobile/ dist/mobile/
 
-      # - name: Deploy stage
-      # if: github.ref == 'refs/heads/staging'
-      #   run: scripts/deploy.staging.sh
-      #   shell: bash
-      - name: Update Embed Host
+      - name: Update embed host (staging)
         if: github.ref == 'refs/heads/staging'
         run: sed -i "s%$appDomainPlaceholder%$appDomain%g" dist/embed.js
         env:
           appDomainPlaceholder: '{appDomain}'
           appDomain: 'https://stage.knowgod.com'
 
-      - name: Deploy to s3
+      - name: Deploy to s3 (staging)
         if: github.ref == 'refs/heads/staging'
         run: |
           aws s3 sync dist/knowgod s3://$S3_BUCKET --acl 'public-read' --exclude '*.html' --cache-control 'public, max-age=31536000' --delete
-          aws s3 sync dist/knowgod s3://$S3_BUCKET --acl 'public-read' --include '*.html' --cache-control 'public, max-age=120' --delete
-          aws s3 cp dist/embed.js s3://$S3_BUCKET --acl 'public-read' --cache-control 'public, max-age=600'
-          aws s3 sync dist/mobile s3://$S3_BUCKET --acl 'public-read' --cache-control 'public, max-age=3600' --content-type 'application/json'
+          aws s3 sync dist/knowgod s3://$S3_BUCKET --acl 'public-read' --include '*.html' --cache-control 'no-cache' --delete
+          aws s3 cp dist/embed.js s3://$S3_BUCKET --acl 'public-read' --cache-control 'no-cache'
+          aws s3 cp dist/example.html s3://$S3_BUCKET --acl 'public-read' --cache-control 'no-cache'
+          aws s3 sync dist/mobile s3://$S3_BUCKET --acl 'public-read' --cache-control 'no-cache' --content-type 'application/json'
         env:
           S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
 
