--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  PreDeployTesting:
+  build:
+    name: Testing the app build + Prettier/Lint checks
     runs-on: ubuntu-latest
 
     steps:
@@ -36,14 +37,15 @@ jobs:
         run: yarn lint
 
       - name: 🏗️ Build app
-        run: yarn ng build --prod
+        run: yarn build --prod
 
-  Deploy:
-    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/staging')}}
+  deploy:
+    name: Deploy
+    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/jp-gha-conversion')}}
     runs-on: ubuntu-latest
     environment:
       name: ${{ (github.ref == 'refs/heads/master' && 'prod') || 'stage' }}
-    needs: PreDeployTesting
+    needs: build
     permissions:
       id-token: write
       contents: read
@@ -56,7 +58,7 @@ jobs:
         run: pip install --user awscli
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@036a4a1ddf2c0e7a782dca6e083c6c53e5d90321
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: us-east-1
           role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
@@ -70,7 +72,7 @@ jobs:
         run: yarn install
 
       - name: 🏗️ Build app
-        run: yarn ng build --prod
+        run: yarn build --prod
 
       - name: Copy embed.js
         run: cp embed/embed.js dist/embed.js
