--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,15 +1,14 @@
-name: Node.js CI
+name: Build & Deploy
 
 on:
   push:
     branches:
-      - jp-gha-conversion
       - staging
-      # - master
+      - master
   pull_request:
     branches:
       - staging
-      # - master
+      - master
   workflow_dispatch:
 
 jobs:
@@ -40,7 +39,7 @@ jobs:
 
   deploy:
     name: Deploy
-    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/jp-gha-conversion')}}
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/staging')
     runs-on: ubuntu-latest
     environment:
       name: ${{ (github.ref == 'refs/heads/master' && 'prod') || 'stage' }}
@@ -55,12 +54,6 @@ jobs:
 
       - name: Install AWSCLI
         run: pip install --user awscli
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: us-east-1
-          role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
 
       - name: Node.js setup
         uses: actions/setup-node@v3
@@ -84,6 +77,12 @@ jobs:
         env:
           appDomainPlaceholder: '{appDomain}'
           appDomain: https://${{ secrets.HOST_NAME }}
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: us-east-1
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
 
       - name: Deploy to s3
         run: |
