--- a/package.json
+++ b/package.json
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@cruglobal/godtools-shared": "^0.8.3-SNAPSHOT.1097",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "ng-lottie": "^0.3.2",
-    "ngx-loading": "^7.0.0",
     "ngx-toastr": "^10.2.0",
-    "ngx-xml2json": "^1.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^6.6.7",
     "text-encoding": "^0.7.0",
     "ts-clipboard": "^1.0.17",
-    "zone.js": "^0.8.29"
+    "tslib": "1.14.1",
+    "xml2js": "^0.5.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.10",
-    "@angular/cli": "~7.3.10",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular/cli": "~8.3.29",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.6.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~14.14.31",
     "@types/text-encoding": "0.0.35",
     "@types/xml2js": "^0.4.8",
-    "codelyzer": "~6.0.1",
+    "codelyzer": "^5.0.1",
     "husky": "^5.1.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
@@ -58,6 +58,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~5.20.1",
-    "typescript": "~3.2.4"
+    "typescript": "3.5.3"
   }
 }
