--- a/package.json
+++ b/package.json
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@cruglobal/godtools-shared": "^0.8.3-SNAPSHOT.1097",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "ng-lottie": "^0.3.2",
-    "ngx-toastr": "^10.2.0",
+    "ngx-toastr": "13.2.1",
     "rxjs": "^6.6.7",
     "text-encoding": "^0.7.0",
     "ts-clipboard": "^1.0.17",
-    "tslib": "1.14.1",
+    "tslib": "^1.10.0",
     "xml2js": "^0.5.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "~8.3.29",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.2.14",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~3.6.4",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~14.14.31",
+    "@types/node": "^12.11.1",
     "@types/text-encoding": "0.0.35",
     "@types/xml2js": "^0.4.8",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "husky": "^5.1.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
@@ -56,8 +56,9 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "protractor": "~7.0.0",
+    "timers": "^0.1.1",
     "ts-node": "~9.1.1",
     "tslint": "~5.20.1",
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   }
 }
