--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@cruglobal/godtools-shared": "^0.8.3-SNAPSHOT.1097",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
@@ -31,14 +31,14 @@
     "rxjs": "^6.6.7",
     "text-encoding": "^0.7.0",
     "ts-clipboard": "^1.0.17",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "xml2js": "^0.5.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler-cli": "^9.1.13",
-    "@angular/language-service": "^9.1.13",
+    "@angular/cli": "~10.2.4",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
     "@types/jasmine": "~3.6.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
@@ -56,9 +56,10 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "protractor": "~7.0.0",
+    "stream": "^0.0.2",
     "timers": "^0.1.1",
     "ts-node": "~9.1.1",
-    "tslint": "~5.20.1",
-    "typescript": "3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "4.0.8"
   }
 }
