--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,11 +5,6 @@
     "types": []
   },
   "exclude": ["src/test.ts", "**/*.spec.ts"],
-  "files": [
-    "main.ts",
-    "polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "files": ["main.ts", "polyfills.ts"],
+  "include": ["src/**/*.d.ts"]
 }
