--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -2,7 +2,9 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
-    "types": ["jasmine", "node"]
+    "module": "es2020",
+    "types": ["jasmine", "node"],
+    "moduleResolution": "node"
   },
   "files": ["test.ts", "polyfills.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
