--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
     "@angular/animations": "^13.4.0",
     "@angular/common": "^13.4.0",
     "@angular/compiler": "^13.4.0",
@@ -23,6 +22,7 @@
     "@angular/platform-browser": "^13.4.0",
     "@angular/platform-browser-dynamic": "^13.4.0",
     "@angular/router": "^13.4.0",
+    "@cruglobal/godtools-shared": "^0.9.0-SNAPSHOT.1150",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "eslint-config-prettier": "^8.8.0",
@@ -36,6 +36,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~13.3.11",
     "@angular-eslint/builder": "15.2.1",
     "@angular-eslint/eslint-plugin": "15.2.1",
     "@angular-eslint/eslint-plugin-template": "15.2.1",
