--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
     "@angular/animations": "^12.2.17",
     "@angular/common": "^12.2.17",
     "@angular/compiler": "^12.2.17",
@@ -23,6 +22,7 @@
     "@angular/platform-browser": "^12.2.17",
     "@angular/platform-browser-dynamic": "^12.2.17",
     "@angular/router": "^12.2.17",
+    "@cruglobal/godtools-shared": "^0.9.0-SNAPSHOT.1150",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "ng-lottie": "^0.3.2",
@@ -33,6 +33,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~12.2.18",
     "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "^12.2.17",
     "@angular/language-service": "^12.2.17",
