--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^12.2.17",
     "@angular/platform-browser-dynamic": "^12.2.17",
     "@angular/router": "^12.2.17",
-    "@cruglobal/godtools-shared": "^0.9.0-SNAPSHOT.1150",
+    "@cruglobal/godtools-shared": "^0.9.0-PR398-SNAPSHOT.1155",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "ng-lottie": "^0.3.2",
