animation component. clean up

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "ng-lottie": "^0.3.2",
+    "lottie-web": "5.9.6",
+    "ngx-lottie": "8.3.0",
     "ngx-toastr": "13.2.1",
     "rxjs": "^6.6.7",
     "ts-clipboard": "^1.0.17",
