--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 
 # dependencies
 /node_modules
+.yarn/*
+!.yarn/cache
+!.yarn/releases
+!.yarn/patches
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
 
 # IDEs and editors
 /.idea
