--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --configuration production",
-    "start:staging": "ng serve --configuration staging",
+    "start:dev": "ng serve --configuration development",
     "build": "ng build --configuration production",
-    "build:staging": "ng build --configuration staging",
+    "build:dev": "ng build --configuration development",
     "test": "ng test",
     "lint": "npx eslint 'src/**/*.{js,ts}' --quiet --fix",
     "e2e": "ng e2e",
